--- a/WpfAppWocoNF4/MainWindow.xaml
+++ b/WpfAppWocoNF4/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:h="http://helix-toolkit.org/wpf"
-        Title="MainWindow" Height="1484" Width="1600">
+        Title="MainWindow" Height="1484" Width="1600" WindowState="Maximized">
     <Grid Margin="0,0,0,-16">
         <Button x:Name="XmlFileButton"  Content="Open gbXML bestand" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="XmlFileButton_Click"/>
         <Label x:Name="FileNameLabel" Content="Label" HorizontalAlignment="Left" Margin="136,10,0,0" VerticalAlignment="Top" Visibility="Hidden"/>
